# whitenoise-pathing-bug-reproduction

./: README.md  manage.py  pyproject.toml  requirements.txt  run.sh
home/: views.py
home/templates/: home.html
whitenoise_bug/: asgi.py  settings.py  urls.py  wsgi.py
