[tool.poetry]
name = "whitenoise-bug"
version = "0.1.0"
description = ""
authors = ["John Higgins <johnmatthiggins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
whitenoise = "^6.8.2"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
